[REFACT] Rename some functions and files
