# docs/swagger.json
@@ -141,7 +141,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/transaction.CreateDTO"
+                            "$ref": "#/definitions/transaction.CreateTransactionDTO"
                         }
                     }
                 ],
@@ -196,7 +196,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/transaction.UpdateDTO"
+                            "$ref": "#/definitions/transaction.UpdateTransactionDTO"
                         }
                     }
                 ],
@@ -300,7 +300,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/dto.CreateDTO"
+                            "$ref": "#/definitions/dto.CreateUserDTO"
                         }
                     }
                 ],
@@ -308,19 +308,19 @@
                     "201": {
                         "description": "Created",
                         "schema": {
-                            "$ref": "#/definitions/dto.ResponseDTO"
+                            "$ref": "#/definitions/dto.ResponseUserDTO"
                         }
                     },
                     "400": {
                         "description": "Dados inválidos",
                         "schema": {
-                            "$ref": "#/definitions/dto.ResponseDTO"
+                            "$ref": "#/definitions/dto.ResponseUserDTO"
                         }
                     },
                     "500": {
                         "description": "Erro ao criar usuário",
                         "schema": {
-                            "$ref": "#/definitions/dto.ResponseDTO"
+                            "$ref": "#/definitions/dto.ResponseUserDTO"
                         }
                     }
                 }
@@ -353,7 +353,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/dto.UpdateDTO"
+                            "$ref": "#/definitions/dto.UpdateUserDTO"
                         }
                     }
                 ],
@@ -361,25 +361,25 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/dto.ResponseDTO"
+                            "$ref": "#/definitions/dto.ResponseUserDTO"
                         }
                     },
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/dto.ResponseDTO"
+                            "$ref": "#/definitions/dto.ResponseUserDTO"
                         }
                     },
                     "404": {
                         "description": "Usuário não encontrado",
                         "schema": {
-                            "$ref": "#/definitions/dto.ResponseDTO"
+                            "$ref": "#/definitions/dto.ResponseUserDTO"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/dto.ResponseDTO"
+                            "$ref": "#/definitions/dto.ResponseUserDTO"
                         }
                     }
                 }
@@ -406,25 +406,25 @@
                     "200": {
                         "description": "Usuário deletado",
                         "schema": {
-                            "$ref": "#/definitions/dto.ResponseDTO"
+                            "$ref": "#/definitions/dto.ResponseUserDTO"
                         }
                     },
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/dto.ResponseDTO"
+                            "$ref": "#/definitions/dto.ResponseUserDTO"
                         }
                     },
                     "404": {
                         "description": "Usuário não encontrado",
                         "schema": {
-                            "$ref": "#/definitions/dto.ResponseDTO"
+                            "$ref": "#/definitions/dto.ResponseUserDTO"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/dto.ResponseDTO"
+                            "$ref": "#/definitions/dto.ResponseUserDTO"
                         }
                     }
                 }
@@ -432,7 +432,7 @@
         }
     },
     "definitions": {
-        "dto.CreateDTO": {
+        "dto.CreateUserDTO": {
             "type": "object",
             "required": [
                 "email",
@@ -479,7 +479,7 @@
                 }
             }
         },
-        "dto.ResponseDTO": {
+        "dto.ResponseUserDTO": {
             "type": "object",
             "properties": {
                 "message": {
@@ -487,7 +487,7 @@
                 }
             }
         },
-        "dto.UpdateDTO": {
+        "dto.UpdateUserDTO": {
             "type": "object",
             "properties": {
                 "email": {
@@ -509,6 +509,9 @@
                 "category": {
                     "type": "string"
                 },
+                "category_id": {
+                    "type": "integer"
+                },
                 "created_at": {
                     "type": "string"
                 },
@@ -526,7 +529,7 @@
                 }
             }
         },
-        "transaction.CreateDTO": {
+        "transaction.CreateTransactionDTO": {
             "type": "object",
             "properties": {
                 "category": {
@@ -543,7 +546,7 @@
                 }
             }
         },
-        "transaction.UpdateDTO": {
+        "transaction.UpdateTransactionDTO": {
             "type": "object",
             "properties": {
                 "category": {
