# internal/controllers/user/createUser.go
@@ -17,22 +17,22 @@ import (
 // @Tags Users
 // @Accept json
 // @Produce json
-// @Param user body dto.CreateDTO true "Dados de criação de usuário"
-// @Success 201 {object} dto.ResponseDTO
-// @Failure 400 {object} dto.ResponseDTO "Dados inválidos"
-// @Failure 500 {object} dto.ResponseDTO "Erro ao criar usuário"
+// @Param user body dto.CreateUserDTO true "Dados de criação de usuário"
+// @Success 201 {object} dto.ResponseUserDTO
+// @Failure 400 {object} dto.ResponseUserDTO "Dados inválidos"
+// @Failure 500 {object} dto.ResponseUserDTO "Erro ao criar usuário"
 // @Router /usuarios/ [post]
 func CreateUser(c *gin.Context) {
-	var input dto.CreateDTO
+	var input dto.CreateUserDTO
 
 	if err := c.ShouldBindJSON(&input); err != nil {
-		c.JSON(http.StatusBadRequest, dto.ResponseDTO{Message: config.BadRequest})
+		c.JSON(http.StatusBadRequest, dto.ResponseUserDTO{Message: config.BadRequest})
 		return
 	}
 
 	hashedPassword, err := utils.HashPassword(input.Senha)
 	if err != nil {
-		c.JSON(http.StatusInternalServerError, dto.ResponseDTO{Message: config.InternalServerError})
+		c.JSON(http.StatusInternalServerError, dto.ResponseUserDTO{Message: config.InternalServerError})
 		return
 	}
 
@@ -43,7 +43,7 @@ func CreateUser(c *gin.Context) {
 	}
 
 	if err := repository.DB.Create(&usuario).Error; err != nil {
-		c.JSON(http.StatusInternalServerError, dto.ResponseDTO{Message: config.InternalServerError})
+		c.JSON(http.StatusInternalServerError, dto.ResponseUserDTO{Message: config.InternalServerError})
 		return
 	}
 
