# internal/dto/category/createCategoryDTO.go
@@ -1,6 +1,6 @@
 package category
 
-type CreateDTO struct {
+type CreateCategoryDTO struct {
 	Name   string `json:"name"`
 	Icon   string `json:"icon"`
 	UserID uint   `json:"user_id"`
