# internal/dto/goal/updateGoalDTO.go
@@ -1,6 +1,6 @@
 package goal
 
-type UpdateDTO struct {
+type UpdateGoalDTO struct {
 	Name         *string  `json:"name,omitempty"`
 	TargetValue  *float64 `json:"target_value,omitempty"`
 	CurrentValue *float64 `json:"current_value,omitempty"`
