# internal/dto/transaction/responseTransactionDTO.go
@@ -1,6 +1,6 @@
 package transaction
 
-type ResponseDTO struct {
+type ResponseTransactionDTO struct {
 	ID          uint    `json:"id"`
 	Description string  `json:"description"`
 	Amount      float64 `json:"amount"`
