# internal/dto/transaction/updateTransactionDTO.go
@@ -1,6 +1,6 @@
 package transaction
 
-type UpdateDTO struct {
+type UpdateTransactionDTO struct {
 	Category *string  `json:"category,omitempty"`
 	Value    *float64 `json:"value,omitempty"`
 	Type     *string  `json:"type,omitempty"`
